--- a/src/components/Confirm/Confirm.module.scss
+++ b/src/components/Confirm/Confirm.module.scss
@@ -4,10 +4,11 @@
   height: calc(100vh - 2 * (44px + 24px));
   justify-content: center;
   margin-top: auto;
+  padding: var(--spacing-base);
   position: fixed;
   top: calc(44px + 24px);
   transition: 600ms ease-out;
-  width: calc(100% - 2 * var(--spacing-base));
+  width: 100%;
 
   &.hidden {
     position: fixed;
